ci: Use GITHUB_OUTPUT envvar instead of set-output command
`save-state` and `set-output` commands used in GitHub Actions are deprecated and [GitHub recommends using environment files](https://github.blog/changelog/2023-07-24-github-actions-update-on-save-state-and-set-output-commands/).

This PR updates the usage of `::set-output` to `"$GITHUB_OUTPUT"`

Instructions for envvar usage from GitHub docs:

https://docs.github.com/en/actions/using-workflows/workflow-commands-for-github-actions#setting-an-output-parameter

--- a/.github/workflows/daemon.yml
+++ b/.github/workflows/daemon.yml
@@ -139,7 +139,7 @@ jobs:
             | xargs sha1sum \
             | sha1sum \
             | cut -d" " -f1)"
-          echo "::set-output name=hash::$hash"
+          echo "hash=$hash" >> "$GITHUB_OUTPUT"
 
       - name: Cache Windows libraries
         uses: actions/cache@v2
