--- a/Cargo.toml
+++ b/Cargo.toml
@@ -39,6 +39,7 @@ members = [
     "talpid-windows",
     "talpid-wireguard",
     "tunnel-obfuscation",
+    "wireguard-go-rs"
 ]
 
 # Keep all lints in sync with `test/Cargo.toml`
