Build `libwg` as shared library
Distribute the app with `libwg.so`

Embed absolute rpath for dev builds on platforms which dynamically links
`libwg`

Add WorkingDirectory key to plist file to load `libwg.so` correctly on
macOS.

--- a/wireguard-go-rs/Cargo.toml
+++ b/wireguard-go-rs/Cargo.toml
@@ -4,7 +4,7 @@ description = "Rust bindings to wireguard-go with DAITA support"
 edition = "2021"
 license.workspace = true
 
-[dependencies]
+[target.'cfg(unix)'.dependencies]
 thiserror.workspace = true
 log.workspace = true
 zeroize = "1.8.1"
