--- a/talpid-openvpn-plugin/Cargo.toml
+++ b/talpid-openvpn-plugin/Cargo.toml
@@ -41,9 +41,17 @@ features = [
     "Win32_System_SystemServices",
 ]
 
+[target.'cfg(windows)'.dependencies]
+# parity-tokio-ipc has an implicit dependency on winapi's winerror feature.
+winapi = { version = "0.3", features = ["winerror"] }
+
 [package.metadata.winres]
 ProductName = "Mullvad VPN"
 CompanyName = "Mullvad VPN AB"
 LegalCopyright = "(c) 2024 Mullvad VPN AB"
 InternalName = "talpid-openvpn-plugin"
 OriginalFilename = "talpid_openvpn_plugin.dll"
+
+# TODO: Remove this once ARM64 Windows no longer requires x64 talpid_openvpn_plugin
+[features]
+api-override = []
