--- a/ios/Configurations/UITests.xcconfig.template
+++ b/ios/Configurations/UITests.xcconfig.template
@@ -7,7 +7,7 @@ IOS_DEVICE_PIN_CODE =
 TEST_DEVICE_IDENTIFIER_UUID = 
 
 // Base64 encoded token for the partner API. Will only be used if account numbers are not configured.
-PARTNER_API_TOKEN = 
+// PARTNER_API_TOKEN = 
 
 // Mullvad accounts used by UI tests
 HAS_TIME_ACCOUNT_NUMBER[config=Debug] = 
