--- a/ci/linux-repository-builder/build-linux-repositories@.service
+++ b/ci/linux-repository-builder/build-linux-repositories@.service
@@ -1,10 +1,10 @@
-# Create separate services with instance names being set to "$server_environment-$repository".
+# Create separate services with instance names being set to "$server_environment".
 # See the build-linux-repositories.sh script for details.
 #
 # For example:
-# * build-linux-repositories@production-stable.service
-# * build-linux-repositories@staging-beta.service
-# * build-linux-repositories@dev-beta.service
+# * build-linux-repositories@production.service
+# * build-linux-repositories@staging.service
+# * build-linux-repositories@dev.service
 #
 # To install this service, do the following:
 #
@@ -13,9 +13,8 @@
 # * Edit `ExecStart` path to point to absolute path to script
 # * Reload systemd: `systemctl --user daemon-reload`
 # * Start the timers:
-#   $ systemctl --user enable --now build-linux-repositories@production-stable.timer
-#   $ systemctl --user enable --now build-linux-repositories@production-beta.timer
-#   ... Repeat for other environments and repositories.
+#   $ systemctl --user enable --now build-linux-repositories@production.timer
+#   ... Repeat for other environments.
 
 [Unit]
 Description=Mullvad Linux repository generation and upload service
