--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,13 +9,12 @@ rust-version = "1.77.0"
 resolver = "2"
 members = [
     "android/translations-converter",
-    "ios/MullvadREST/Transport/Shadowsocks/shadowsocks-proxy",
-    "ios/TunnelObfuscation/tunnel-obfuscator-proxy",
     "mullvad-api",
     "mullvad-cli",
     "mullvad-daemon",
     "mullvad-exclude",
     "mullvad-fs",
+    "mullvad-ios",
     "mullvad-jni",
     "mullvad-management-interface",
     "mullvad-nsis",
@@ -39,7 +38,7 @@ members = [
     "talpid-windows",
     "talpid-wireguard",
     "tunnel-obfuscation",
-    "wireguard-go-rs"
+    "wireguard-go-rs",
 ]
 
 # Keep all lints in sync with `test/Cargo.toml`
@@ -81,7 +80,7 @@ shadowsocks-service = { version = "1.16" }
 
 windows-sys = "0.52.0"
 
-chrono = { version = "0.4.26", default-features = false}
+chrono = { version = "0.4.26", default-features = false }
 clap = { version = "4.4.18", features = ["cargo", "derive"] }
 once_cell = "1.13"
 
