--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -26,7 +26,7 @@
                  android:icon="@mipmap/ic_launcher"
                  android:label="@string/app_name"
                  android:roundIcon="@mipmap/ic_launcher"
-                 android:theme="@style/AppTheme"
+                 android:theme="@style/Theme.App.Starting"
                  tools:ignore="GoogleAppIndexingWarning">
         <!--
             MainActivity
