Configure which CI jobs should be triggered by osv-scanner.toml changes

--- a/.github/workflows/verify-locked-down-signatures.yml
+++ b/.github/workflows/verify-locked-down-signatures.yml
@@ -25,6 +25,7 @@ on:
       - building/linux-container-image.txt
       - building/android-container-image.txt
       - building/sigstore/**
+      - '**/osv-scanner.toml'
 jobs:
   verify-signatures:
     runs-on: ubuntu-latest
