--- a/test/test-manager/Cargo.toml
+++ b/test/test-manager/Cargo.toml
@@ -62,6 +62,7 @@ ssh2 = "0.9.4"
 nix = { version = "0.26", features = ["net"] }
 rend = { version = "0.4.2", features = ["bytemuck"] }
 bytemuck = { version = "1.16.1", features = ["derive"] }
+socket2 = "0.5.6"
 
 [target.'cfg(target_os = "macos")'.dependencies]
 tun = "0.5.1"
