--- a/.github/workflows/daemon.yml
+++ b/.github/workflows/daemon.yml
@@ -11,6 +11,8 @@ on:
       - '!audits/**'
       - '!build-apk.sh'
       - '!build.sh'
+      - '!ci/**'
+      - 'ci/check-rust.sh'
       - '!clippy.toml'
       - '!deny.toml'
       - '!docs/**'
