--- a/.github/workflows/yamllint.yml
+++ b/.github/workflows/yamllint.yml
@@ -11,6 +11,8 @@ on:
 
 permissions: {}
 
+# This is a way too long line, so see if the CI job works..................................... HELLO very long line!.... LONG
+
 jobs:
   check-formatting:
     runs-on: ubuntu-latest
