Fix lints for Rust verson 1.80 in e2e tests
* Lower priority for lint group
* doc list item missing indentation

--- a/test/Cargo.toml
+++ b/test/Cargo.toml
@@ -21,7 +21,7 @@ members = [
 non_ascii_idents = "forbid"
 
 # Deny old style Rust
-rust_2018_idioms = "deny"
+rust_2018_idioms = { level = "deny", priority = -1 }
 macro_use_extern_crate = "deny"
 absolute_paths_not_starting_with_crate = "deny"
 
