--- a/mullvad-api/Cargo.toml
+++ b/mullvad-api/Cargo.toml
@@ -23,8 +23,8 @@ http = "0.2"
 hyper = { version = "0.14", features = ["client", "stream", "http1", "tcp" ] }
 ipnetwork = { workspace = true }
 log = { workspace = true }
-serde = "1"
-serde_json = "1.0"
+serde = { workspace = true }
+serde_json = { workspace = true }
 tokio = { workspace = true, features = ["macros", "time", "rt-multi-thread", "net", "io-std", "io-util", "fs"] }
 tokio-rustls = "0.24.1"
 tokio-socks = "0.5.1"
