--- a/mullvad-relay-selector/Cargo.toml
+++ b/mullvad-relay-selector/Cargo.toml
@@ -18,7 +18,7 @@ itertools = "0.12"
 log = { workspace = true }
 once_cell = { workspace = true }
 rand = "0.8.5"
-serde_json = "1.0"
+serde_json = { workspace = true }
 
 talpid-types = { path = "../talpid-types" }
 mullvad-types = { path = "../mullvad-types" }
