--- a/mullvad-types/Cargo.toml
+++ b/mullvad-types/Cargo.toml
@@ -17,7 +17,7 @@ ipnetwork = { workspace = true }
 once_cell = { workspace = true }
 log = { workspace = true }
 regex = "1"
-serde = { version = "1.0", features = ["derive"] }
+serde = { workspace = true, features = ["derive"] }
 uuid = { version = "1.4.1", features = ["v4", "serde" ] }
 
 talpid-types = { path = "../talpid-types" }
