--- a/talpid-core/Cargo.toml
+++ b/talpid-core/Cargo.toml
@@ -58,8 +58,8 @@ pcap = { version = "2.0", features = ["capture-stream"] }
 pnet_packet = "0.34"
 tun = { version = "0.5.5", features = ["async"] }
 nix = { version = "0.28", features = ["socket"] }
-serde = { version = "1.0", features = ["derive"] }
-serde_json = "1.0"
+serde = { workspace = true, features = ["derive"] }
+serde_json = { workspace = true }
 
 [target.'cfg(windows)'.dependencies]
 bitflags = "1.2"
