--- a/test/connection-checker/Cargo.toml
+++ b/test/connection-checker/Cargo.toml
@@ -16,5 +16,5 @@ color-eyre = "0.6.2"
 eyre = "0.6.12"
 ping = "0.5.2"
 reqwest = { version = "0.11.24", default-features = false, features = ["blocking", "rustls-tls", "json"] }
-serde = { version = "1.0.197", features = ["derive"] }
+serde = { workspace = true, features = ["derive"] }
 socket2 = { version = "0.5.4", features = ["all"] }
