Refactor tunnel provider and TalpidVpnService
This also fixes the issue of the VPN service being restarted
unnecessarily

--- a/talpid-tunnel/Cargo.toml
+++ b/talpid-tunnel/Cargo.toml
@@ -11,6 +11,7 @@ rust-version.workspace = true
 workspace = true
 
 [dependencies]
+once_cell = { workspace = true }
 thiserror = { workspace = true }
 cfg-if = "1.0"
 ipnetwork = { workspace = true }
