Add typed target tunnel state

--- a/mullvad-daemon/Cargo.toml
+++ b/mullvad-daemon/Cargo.toml
@@ -17,6 +17,7 @@ api-override = ["mullvad-api/api-override"]
 [dependencies]
 chrono = { workspace = true }
 thiserror = { workspace = true }
+either = "1.11"
 fern = { version = "0.6", features = ["colored"] }
 futures = "0.3"
 once_cell = { workspace = true }
