--- a/.github/workflows/android-audit.yml
+++ b/.github/workflows/android-audit.yml
@@ -21,6 +21,9 @@ on:
         description: Override container image
         type: string
         required: false
+
+permissions: {}
+
 jobs:
   prepare:
     name: Prepare
