--- a/.github/workflows/daemon.yml
+++ b/.github/workflows/daemon.yml
@@ -33,6 +33,9 @@ on:
         description: Override container image
         type: string
         required: false
+
+permissions: {}
+
 jobs:
   prepare-linux:
     runs-on: ubuntu-latest
